# Skill-Quest

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
skillquest/: README.md  pyproject.toml
skillquest/src/skillquest/: app.py  crew.py  main.py  memory.py
skillquest/src/skillquest/config/: agents.yaml  tasks.yaml
