[project]
name = "skillquest"
version = "0.1.0"
description = "SkillQuest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
skillquest = "skillquest.main:run"
run_crew = "skillquest.main:run"
train = "skillquest.main:train"
replay = "skillquest.main:replay"
test = "skillquest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
